--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Marietta Research Solutions",
   "short_name": "MRS",
-  "start_url": "./index.html",
+  "start_url": "/Marietta-site/",
   "display": "standalone",
   "background_color": "#1f3a5f",
   "theme_color": "#1f3a5f",
