--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,9 @@
   "display": "standalone",
   "background_color": "#1f3a5f",
   "theme_color": "#1f3a5f",
+
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "android-chrome-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "android-chrome-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
